# cros-codecs

./: BUILD.gn  Cargo.toml  simple_test.py
src/: bitstream_utils.rs  lib.rs  utils.rs
src/codec/av1/: parser.rs  reader.rs  writer.rs
src/codec/h264/: nalu.rs  nalu_writer.rs  parser.rs
src/codec/h265/: parser.rs
src/codec/vp8/: bool_decoder.rs  parser.rs
src/codec/vp9/: parser.rs
src/decoder/: stateless.rs
src/decoder/stateless/: av1.rs  h264.rs  h265.rs  vp8.rs  vp9.rs
src/decoder/stateless/h264/: vaapi.rs
src/decoder/stateless/h265/: vaapi.rs
