import("//build/rust/rust_static_library.gni")

rust_static_library("cros-codecs") {
  crate_root = "src/lib.rs"
  allow_unsafe = true
  sources = [
    "src/backend/vaapi.rs",
    "src/backend/dummy.rs",
    "src/backend/vaapi/surface_pool.rs",
    "src/backend/vaapi/decoder.rs",
    "src/backend/vaapi/encoder.rs",
    "src/backend/v4l2/encoder.rs",
    "src/backend/dummy/decoder.rs",
    "src/backend/v4l2.rs",
    "src/encoder/stateful/vp8/v4l2.rs",
    "src/encoder/stateful/h264/v4l2.rs",
    "src/encoder/stateful/vp9.rs",
    "src/encoder/stateful/vp9/v4l2.rs",
    "src/encoder/stateful/h264.rs",
    "src/encoder/stateful/vp8.rs",
    "src/encoder/stateful/h265/v4l2.rs",
    "src/encoder/stateful/h265.rs",
    "src/encoder/stateful.rs",
    "src/encoder/stateless/av1/vaapi.rs",
    "src/encoder/stateless/av1/predictor.rs",
    "src/encoder/stateless/h264/vaapi.rs",
    "src/encoder/stateless/h264/predictor.rs",
    "src/encoder/stateless/av1.rs",
    "src/encoder/stateless/vp9.rs",
    "src/encoder/stateless/vp9/vaapi.rs",
    "src/encoder/stateless/vp9/predictor.rs",
    "src/encoder/stateless/h264.rs",
    "src/encoder/stateless/predictor.rs",
    "src/encoder/stateless.rs",
    "src/encoder/av1.rs",
    "src/encoder/vp9.rs",
    "src/encoder/h264.rs",
    "src/encoder/vp8.rs",
    "src/encoder/h265.rs",
    "src/backend.rs",
    "src/lib.rs",
    "src/codec.rs",
    "src/codec/av1/writer.rs",
    "src/codec/av1/helpers.rs",
    "src/codec/av1/synthesizer.rs",
    "src/codec/av1/parser.rs",
    "src/codec/av1/reader.rs",
    "src/codec/vp8/bool_decoder.rs",
    "src/codec/vp8/parser.rs",
    "src/codec/vp8/probs.rs",
    "src/codec/h264/nalu_writer.rs",
    "src/codec/h264/synthesizer.rs",
    "src/codec/h264/picture.rs",
    "src/codec/h264/dpb.rs",
    "src/codec/h264/nalu.rs",
    "src/codec/h264/parser.rs",
    "src/codec/av1.rs",
    "src/codec/vp9.rs",
    "src/codec/vp9/lookups.rs",
    "src/codec/vp9/parser.rs",
    "src/codec/h264.rs",
    "src/codec/vp8.rs",
    "src/codec/h265/picture.rs",
    "src/codec/h265/dpb.rs",
    "src/codec/h265/parser.rs",
    "src/codec/h265.rs",
    "src/decoder/stateless/av1/vaapi.rs",
    "src/decoder/stateless/av1/dummy.rs",
    "src/decoder/stateless/vp8/vaapi.rs",
    "src/decoder/stateless/vp8/dummy.rs",
    "src/decoder/stateless/h264/vaapi.rs",
    "src/decoder/stateless/h264/dummy.rs",
    "src/decoder/stateless/av1.rs",
    "src/decoder/stateless/vp9.rs",
    "src/decoder/stateless/vp9/vaapi.rs",
    "src/decoder/stateless/vp9/dummy.rs",
    "src/decoder/stateless/h264.rs",
    "src/decoder/stateless/vp8.rs",
    "src/decoder/stateless/h265/vaapi.rs",
    "src/decoder/stateless/h265/dummy.rs",
    "src/decoder/stateless/h265.rs",
    "src/decoder/stateless.rs",
    "src/image_processing.rs",
    "src/utils.rs",
    "src/bitstream_utils.rs",
    "src/decoder.rs",
    "src/encoder.rs",
  ]
  deps = [
    "//third_party/rust/log/v0_4:lib",
  ]
  visibility = [ "//media/parsers" ]
}
